--- a/public/loginpage.html
+++ b/public/loginpage.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="login.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <div class="container">
-    <div class="loginBox">
+      <div class="loginBox">
         <form>
-            <div class="loginItems">
+          <div class="loginItems">
             <label>Username</label>
-            <input type="text" id="username"/></div>
-            <div class="loginItems">
+            <input type="text" id="username" />
+          </div>
+          <div class="loginItems">
             <label>Password</label>
-            <input type="password" id="password"/></div>
-            <div class="loginItems">
-        <button id="loginBtn">login</button>
+            <input type="password" id="password" />
+          </div>
+          <div class="loginItems">
+            <button id="loginBtn">login</button>
+          </div>
+        </form>
+        <div class="loginItems">
+          <a href="register.html">register</a>
+        </div>
+      </div>
     </div>
-       </form>
-       <div class="loginItems">
-        
-         <a href="register.html">register</a></div>
-         </div>
-    </div>
-</body>
+    <script src="login.js"></script>
+  </body>
 </html>
